compsac_special_issue26/dataset/1.code_smell_tf_file/unrestricted_ip_address/t_sample49.tf
resource "aws_security_group" "vpc_a_sg_jump" {
  vpc_id = aws_vpc.vpc_a.id
  ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
      description = "SSH Access"
  }
  ingress {
      from_port   = 8
      to_port     = 0
      protocol    = "icmp"
      cidr_blocks = ["0.0.0.0/0"]
      description = "ICMP Access"
  }
 egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all"
  }
  tags = {
    Name =  format("%s_jump", var.vpc_a)
  }
}
